test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/return_void_as_pointer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: x
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CCast: 
                  CConstant: 
                    CConstInt: 
                      TInt: 0
                    None: 
                  Void: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Pointer: 
            Void: 
        None: 
